test/negative/t11.mli.expected

*******************************
********** Parsed file ********
*******************************
[@@@gospel {| function rec f (x: bool) (y: int): bool = f x y |}]
[@@@gospel
  {| function g (a: int): integer =
      if (f true 2) then 1 else 2 |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

(*@ function rec f ... *)

(*@ function g ... *)
File "t11.mli", line 4, characters 17-18:
Error: Type mismatch. Cannot match integer with int
